2014-06-26  Carl Hetherington  <cth@carlh.net>

	* Optimisation of uncertain effect to encoder and server
	thread handling.

	* Version 1.70.0 released.

2014-06-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.37 released.

2014-06-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.36 released.

2014-06-25  Carl Hetherington  <cth@carlh.net>

	* Support pixel format 46 in make_black().

2014-06-24  Carl Hetherington  <cth@carlh.net>

	* Re-assign timeline tracks when things are
	moved about.

2014-06-23  Carl Hetherington  <cth@carlh.net>

	* Try harder to cope with DCP names specified
	already in CamelCase.

	* Add option to CC a KDM email, and add
	$SCREENS and $CINEMA_NAME as variables
	in the email.

2014-06-22  Carl Hetherington  <cth@carlh.net>

	* Reset-to-default button for KDM email text.

	* Version 1.69.35 released.

2014-06-22  Carl Hetherington  <cth@carlh.net>

	* Fix large memory leak with image sources.

2014-06-21  Carl Hetherington  <cth@carlh.net>

	* Move email config into the KDM email page.

	* Version 1.69.34 released.

2014-06-21  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.33 released.

2014-06-21  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.32 released.

2014-06-21  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.31 released.

2014-06-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.30 released.

2014-06-20  Carl Hetherington  <cth@carlh.net>

	* Updates to de_DE translation from Carsten Kurz.

2014-06-18  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.29 released.

2014-06-18  Carl Hetherington  <cth@carlh.net>

	* Fix thinko causing incorrect audio sample rates in some cases.

2014-06-15  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.28 released.

2014-06-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.27 released.

2014-06-12  Carl Hetherington  <cth@carlh.net>

	* Add Content menu with "scale to fit width" and "scale
	to fit height" options.

	* Version 1.69.26 released.
