@@ -1,5 +1,7 @@
 2014-06-26  Carl Hetherington  <cth@carlh.net>
 
+	* Allow override of detected video frame rates.
+
 	* Optimisation of uncertain effect to encoder and server
 	thread handling.
 
